PTC-3: filter the charge stations
